fix numberinput null error plus tet align left md

--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -209,8 +209,10 @@
   background: #192c3e  !important;
 }
 
-.custom-html-style {
-    color: white !important;
+.custom-html-style {  
+  margin: 15px;
+  text-align: left !important;
+  color: white !important;
 }
 
 .ant-collapse-expand-icon {
